Fix: z-index sidebar and upgrade button

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ img{
     background-color: var(--dark);
     flex-shrink: 0;
     color: var(--light-grey);
-    z-index: 1;
+    z-index: 2;
 }
 
 .side-bar{
@@ -269,6 +269,7 @@ img{
     position: fixed;
     right: 0;
     left: 0;
+    z-index: 1;
 }
 
 .header-button{
